Release v1.1.0