@@ -1,29 +1,23 @@
 package com.github.ddth.pubsub.impl.universal;
 
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.Map;
-
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.lang3.builder.EqualsBuilder;
-import org.apache.commons.lang3.builder.HashCodeBuilder;
-
 import com.github.ddth.commons.serialization.ISerializationSupport;
 import com.github.ddth.commons.utils.DPathUtils;
 import com.github.ddth.commons.utils.SerializationUtils;
 import com.github.ddth.queue.impl.GenericMessage;
-import com.github.ddth.queue.utils.QueueUtils;
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+
+import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * Base class for universal messages, where data is stored as {@code byte[]}.
- * 
+ *
  * @author Thanh Ba Nguyen <bnguyen2k@gmail.com>
  * @since 0.7.0
  */
-public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]>
-        implements ISerializationSupport {
-
+public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]> implements ISerializationSupport {
     /**
      * {@inheritDoc}
      */
@@ -53,17 +47,17 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
         return false;
     }
 
-    public final static String FIELD_ID = "id", FIELD_TIMESTAMP = "time", FIELD_DATA = "data",
-            FIELD_PARTITION_KEY = "pkey";
+    public final static String FIELD_ID = "id", FIELD_TIMESTAMP = "time", FIELD_DATA = "data", FIELD_PARTITION_KEY = "pkey";
 
     /**
      * Serialize this queue message to a {@link Map}.
-     * 
+     *
      * @return
      */
     public Map<String, Object> toMap() {
-        return new HashMap<String, Object>() {
+        return new HashMap<>() {
             private static final long serialVersionUID = 1L;
+
             {
                 put(FIELD_ID, getId());
                 put(FIELD_TIMESTAMP, getTimestamp());
@@ -75,7 +69,7 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Deserialize queue message from a {@link Map}.
-     * 
+     *
      * @param dataMap
      * @return
      */
@@ -96,7 +90,7 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
             if (content instanceof byte[]) {
                 setContent((byte[]) content);
             } else if (content instanceof String) {
-                setContent((byte[]) Base64.decodeBase64((String) content));
+                setContent(Base64.getDecoder().decode((String) content));
             }
         }
 
@@ -110,7 +104,7 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Serialize this queue message to Json string.
-     * 
+     *
      * @return
      */
     protected String toJson() {
@@ -120,7 +114,7 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Deserialize queue message from a Json string.
-     * 
+     *
      * @param dataJson
      * @return
      */
@@ -132,13 +126,13 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Serializes to {@code byte[]}.
-     * 
+     *
      * @return
      */
     @Override
     public byte[] toBytes() {
         String json = toJson();
-        return json != null ? json.getBytes(QueueUtils.UTF8) : null;
+        return json != null ? json.getBytes(StandardCharsets.UTF_8) : null;
     }
 
     /**
@@ -146,27 +140,23 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
      * {@link #toBytes()}.
      *
      * @param msgData
+     * @param clazz
+     * @param <T>
+     * @param <ID>
      * @return
+     * @throws NoSuchMethodException
      * @throws IllegalAccessException
+     * @throws InvocationTargetException
      * @throws InstantiationException
      */
-    @SuppressWarnings("unchecked")
-    public static <T extends BaseUniversalMessage<ID>, ID> T fromBytes(byte[] msgData,
-            Class<T> clazz) throws InstantiationException, IllegalAccessException {
-        // firstly, deserialize the input data to a map
-        String msgDataJson = msgData != null ? new String(msgData, QueueUtils.UTF8) : null;
-        Map<String, Object> dataMap = null;
-        try {
-            dataMap = msgDataJson != null
-                    ? SerializationUtils.fromJsonString(msgDataJson, Map.class) : null;
-        } catch (Exception e) {
-            dataMap = null;
-        }
-        if (dataMap == null) {
+    public static <T extends BaseUniversalMessage<ID>, ID> T fromBytes(byte[] msgData, Class<T> clazz)
+            throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
+        String msgDataJson = msgData != null ? new String(msgData, StandardCharsets.UTF_8) : null;
+        if (msgDataJson == null) {
             return null;
         }
-        T msg = clazz.newInstance();
-        msg.fromMap(dataMap);
+        T msg = clazz.getDeclaredConstructor().newInstance();
+        msg.fromJson(msgDataJson);
         return msg;
     }
 
@@ -180,7 +170,7 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Gets message's content.
-     * 
+     *
      * @return
      */
     public byte[] getContent() {
@@ -189,17 +179,17 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Gets message's content as a String.
-     * 
+     *
      * @return
      */
     public String getContentAsString() {
         byte[] data = getContent();
-        return data != null ? new String(data, QueueUtils.UTF8) : null;
+        return data != null ? new String(data, StandardCharsets.UTF_8) : null;
     }
 
     /**
      * Sets message's content.
-     * 
+     *
      * @param content
      * @return
      */
@@ -210,11 +200,11 @@ public abstract class BaseUniversalMessage<ID> extends GenericMessage<ID, byte[]
 
     /**
      * Sets message's content.
-     * 
+     *
      * @param content
      * @return
      */
     public BaseUniversalMessage<ID> setContent(String content) {
-        return setContent(content != null ? content.getBytes(QueueUtils.UTF8) : null);
+        return setContent(content != null ? content.getBytes(StandardCharsets.UTF_8) : null);
     }
 }
