@@ -1,33 +1,28 @@
 package com.github.ddth.queue.impl.universal;
 
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.Map;
-
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.lang3.builder.EqualsBuilder;
-import org.apache.commons.lang3.builder.HashCodeBuilder;
-
 import com.github.ddth.commons.serialization.ISerializationSupport;
 import com.github.ddth.commons.utils.DPathUtils;
 import com.github.ddth.commons.utils.SerializationUtils;
 import com.github.ddth.queue.impl.GenericQueueMessage;
-import com.github.ddth.queue.utils.QueueUtils;
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+
+import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * Base class for universal queue messages, where data is stored as
  * {@code byte[]}.
- * 
+ *
  * @author Thanh Ba Nguyen <bnguyen2k@gmail.com>
  * @since 0.3.3
  */
 public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<ID, byte[]>
         implements ISerializationSupport {
-
     /**
      * {@inheritDoc}
-     * 
+     *
      * @since 0.5.0
      */
     @Override
@@ -39,7 +34,7 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * {@inheritDoc}
-     * 
+     *
      * @since 0.5.0
      */
     @Override
@@ -56,19 +51,18 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
         return false;
     }
 
-    public final static String FIELD_QUEUE_ID = "id", FIELD_TIMESTAMP = "time",
-            FIELD_QUEUE_TIMESTAMP = "queue_time", FIELD_NUM_REQUEUES = "num_requeues",
-            FIELD_DATA = "data", FIELD_PARTITION_KEY = "pkey";
+    public final static String FIELD_QUEUE_ID = "id", FIELD_TIMESTAMP = "time", FIELD_QUEUE_TIMESTAMP = "queue_time", FIELD_NUM_REQUEUES = "num_requeues", FIELD_DATA = "data", FIELD_PARTITION_KEY = "pkey";
 
     /**
      * Serialize this queue message to a {@link Map}.
-     * 
+     *
      * @return
      * @since 0.5.0
      */
     public Map<String, Object> toMap() {
-        return new HashMap<String, Object>() {
+        return new HashMap<>() {
             private static final long serialVersionUID = 1L;
+
             {
                 put(FIELD_QUEUE_ID, getId());
                 put(FIELD_TIMESTAMP, getTimestamp());
@@ -82,7 +76,7 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * Deserialize queue message from a {@link Map}.
-     * 
+     *
      * @param dataMap
      * @return
      * @since 0.5.0
@@ -114,7 +108,7 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
             if (content instanceof byte[]) {
                 setContent((byte[]) content);
             } else if (content instanceof String) {
-                setContent((byte[]) Base64.decodeBase64((String) content));
+                setContent(Base64.getDecoder().decode((String) content));
             }
         }
 
@@ -128,7 +122,7 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * Serialize this queue message to Json string.
-     * 
+     *
      * @return
      * @since 0.5.0
      */
@@ -139,7 +133,7 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * Deserialize queue message from a Json string.
-     * 
+     *
      * @param dataJson
      * @return
      * @since 0.5.0
@@ -152,13 +146,13 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * Serializes to {@code byte[]}.
-     * 
+     *
      * @return
      */
     @Override
     public byte[] toBytes() {
         String json = toJson();
-        return json != null ? json.getBytes(QueueUtils.UTF8) : null;
+        return json != null ? json.getBytes(StandardCharsets.UTF_8) : null;
     }
 
     /**
@@ -166,27 +160,23 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
      * {@link #toBytes()}.
      *
      * @param msgData
+     * @param clazz
+     * @param <T>
+     * @param <ID>
      * @return
+     * @throws NoSuchMethodException
      * @throws IllegalAccessException
+     * @throws InvocationTargetException
      * @throws InstantiationException
      */
-    @SuppressWarnings("unchecked")
-    public static <T extends BaseUniversalQueueMessage<ID>, ID> T fromBytes(byte[] msgData,
-            Class<T> clazz) throws InstantiationException, IllegalAccessException {
-        // firstly, deserialize the input data to a map
-        String msgDataJson = msgData != null ? new String(msgData, QueueUtils.UTF8) : null;
-        Map<String, Object> dataMap = null;
-        try {
-            dataMap = msgDataJson != null
-                    ? SerializationUtils.fromJsonString(msgDataJson, Map.class) : null;
-        } catch (Exception e) {
-            dataMap = null;
-        }
-        if (dataMap == null) {
+    public static <T extends BaseUniversalQueueMessage<ID>, ID> T fromBytes(byte[] msgData, Class<T> clazz)
+            throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
+        String msgDataJson = msgData != null ? new String(msgData, StandardCharsets.UTF_8) : null;
+        if (msgDataJson == null) {
             return null;
         }
-        T msg = clazz.newInstance();
-        msg.fromMap(dataMap);
+        T msg = clazz.getDeclaredConstructor().newInstance();
+        msg.fromJson(msgDataJson);
         return msg;
     }
 
@@ -196,38 +186,6 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
     @Override
     public BaseUniversalQueueMessage<ID> clone() {
         return (BaseUniversalQueueMessage<ID>) super.clone();
-    }
-
-    /**
-     * Set queue message's data.
-     *
-     * @param data
-     * @return
-     * @since 0.6.0
-     * @deprecated since v0.7.0 use {@link #setContent(String)}
-     */
-    public BaseUniversalQueueMessage<ID> qData(String data) {
-        return content(data);
-    }
-
-    /**
-     * Gets message's content.
-     *
-     * @return
-     * @deprecated since v0.7.0 use {@link #getContent()}
-     */
-    public byte[] content() {
-        return getContent();
-    }
-
-    /**
-     * Gets message's content as a String.
-     *
-     * @return
-     * @deprecated since v0.7.0 use {@link #getContentAsString()}
-     */
-    public String contentAsString() {
-        return getContentAsString();
     }
 
     /**
@@ -247,35 +205,13 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
      * @since 0.7.0
      */
     public String getContentAsString() {
-        byte[] data = content();
-        return data != null ? new String(data, QueueUtils.UTF8) : null;
+        byte[] data = getContent();
+        return data != null ? new String(data, StandardCharsets.UTF_8) : null;
     }
 
     /**
      * Sets message's content.
-     * 
-     * @param content
-     * @return
-     * @deprecated since v0.7.0 use {@link #setContent(byte[])}
-     */
-    public BaseUniversalQueueMessage<ID> content(byte[] content) {
-        return setContent(content);
-    }
-
-    /**
-     * Sets message's content.
-     * 
-     * @param content
-     * @return
-     * @deprecated since v0.7.0 use {@link #setContent(String)}
-     */
-    public BaseUniversalQueueMessage<ID> content(String content) {
-        return setContent(content);
-    }
-
-    /**
-     * Sets message's content.
-     * 
+     *
      * @param content
      * @return
      * @since 0.7.0
@@ -287,13 +223,12 @@ public abstract class BaseUniversalQueueMessage<ID> extends GenericQueueMessage<
 
     /**
      * Sets message's content.
-     * 
+     *
      * @param content
      * @return
      * @since 0.7.0
      */
     public BaseUniversalQueueMessage<ID> setContent(String content) {
-        return content(content != null ? content.getBytes(QueueUtils.UTF8) : null);
+        return setContent(content != null ? content.getBytes(StandardCharsets.UTF_8) : null);
     }
-
 }
